--- a/tests/mixin-content.css
+++ b/tests/mixin-content.css
@@ -1,4 +1,5 @@
 #logo {
 	background-image: url("/images/logo.png"); }
 * html #logo {
-	background-image: url("/images/logo.gif"); }
+    width: 500px;
+    background-image: url("/images/logo.gif"); }
