--- a/tests/mixin-content.scss
+++ b/tests/mixin-content.scss
@@ -1,3 +1,4 @@
+$fiver: 500px;
 @mixin ie6 {
 	* html & {
 		@content
@@ -8,5 +9,6 @@
 	background-image: url("/images/logo.png");
 	@include ie6 {
 		background-image: url("/images/logo.gif");
+		width: $fiver;
 	}
 }
